# HuffmanProject

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: HuffmanCoder.cpp  HuffmanCoder.h  main.cpp
tests/: test_huffman.cpp
